// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalStateBadge matches snapshot for state Active 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-blue-100 text-blue-800 border border-blue-200"
>
  ●
   
  Active
</span>
`;

exports[`ProposalStateBadge matches snapshot for state Cancelled 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-700 border border-gray-200"
>
  ⊘
   
  Cancelled
</span>
`;

exports[`ProposalStateBadge matches snapshot for state Defeated 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-red-100 text-red-800 border border-red-200"
>
  ✕
   
  Defeated
</span>
`;

exports[`ProposalStateBadge matches snapshot for state Executed 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-purple-100 text-purple-800 border border-purple-200"
>
  ✅
   
  Executed
</span>
`;

exports[`ProposalStateBadge matches snapshot for state Expired 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-rose-100 text-rose-800 border border-rose-200"
>
  ⌛
   
  Expired
</span>
`;

exports[`ProposalStateBadge matches snapshot for state Pending 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800 border border-yellow-200"
>
  ⏳
   
  Pending
</span>
`;

exports[`ProposalStateBadge matches snapshot for state Queued 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-purple-100 text-purple-800 border border-purple-200"
>
  ⏳
   
  Queued
</span>
`;

exports[`ProposalStateBadge matches snapshot for state Succeeded 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-green-100 text-green-800 border border-green-200"
>
  ✓
   
  Succeeded
</span>
`;
